--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,5 @@
       "services"
     ]
   },
-  "repositories": {
-    "packagist": {
-      "type": "composer",
-      "url": "https://packagist.phpcomposer.com"
-    }
-  }
+  "minimum-stability": "dev"
 }
